syntax = "proto3";

package users;

service Users {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
  rpc GetUser (GetUserRequest) returns (GetUserResponse){}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse){}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse){}
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
    uint64 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message DeleteUserResponse {}

message User {
    uint64 id = 1;
    string first_name = 2;
    string last_name = 3;
}